--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "responsive": "^2.0.0",
+    "scripts": "^0.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
