--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "tutorial",
+  "name": "MAZE",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.1",
@@ -17,8 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "responsive": "^2.0.0",
-    "scripts": "^0.1.0",
-    "web-vitals": "^1.0.1"
+    "scripts": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
